@@ -16,7 +16,8 @@ libexec_PROGRAMS =	$(CHG_SCSI) $(CHIO_SCSI)
 
 libexec_SCRIPTS =	chg-manual	chg-multi	chg-mtx		\
 			chg-rth		chg-chs		chg-chio	\
-			chg-zd-mtx	chg-juke
+			chg-zd-mtx	chg-juke	chg-rait
+			chg-null
 
 ###
 # Because libamanda includes routines (e.g. regex) provided by some system
