@@ -1,3 +1,15 @@
+2002-11-14  Marc Mengel <mengel@fnal.gov>
+	New changer scripts for use with rait: code, run several other
+	changers in tandem and return a rait: tape device.  Makes fake
+	amanda.conf files under AMANDA_DEBUGDIR for each changer used,
+	then cleans up.
+
+	* changer-src/chg-rait.sh.in:	New file. Multi-changer script.
+	* changer-src/chg-null.sh.in:	New File. Null-device changer script.
+	* docs/TAPE.CHANGERS:  Descriptions of above.
+	* configure.in: added above files.
+	* changer-src/Makefile.am: Likewise.
+
 2002-11-14  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>
 	Patch by Orion Poplawski <orion@colorado-research.com>
 
